syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "ConsultaChavePixGrpc";
option objc_class_prefix = "HLW";

package br.com.zup;

import "google/protobuf/timestamp.proto";

service ConsultaChavePixGrpcService {
  rpc consultar(ConsultaChavePixRequest) returns (ConsultaChavePixResponse) {}
}

message ConsultaChavePixRequest {
  message FiltroPorPixId {
    int64 chaveId = 1;
    string clienteId = 2;
  }

  oneof filtro {
    FiltroPorPixId chaveId = 1;
    string chave = 2;
  }
}

message TitularResponse {
  string cpf = 1;
  string nome = 2;
}

message ContaResponse {
  string nome = 1;
  string agencia = 2;
  string numero = 3;
  string tipoDaConta = 4;
}

message ConsultaChavePixResponse {
  string chaveId = 1;
  string clienteId = 2;
  string tipoDaChave = 3;
  string chave = 4;
  TitularResponse titular = 5;
  ContaResponse conta = 6;
  google.protobuf.Timestamp criadoEm = 7;
}

